--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,10 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.1",
     "framer-motion": "^10.16.4",
-    "i": "^0.3.7",
-    "npm": "^10.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-scrollable-feed": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
