--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.18.0",
-    "react-scrollable-feed": "^1.3.2"
+    "react-scrollable-feed": "^1.3.2",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
