--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --env-file=.env index.js",
+    "start": "node --env-file=.env index.js",
+    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,7 +19,6 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   }
 }
