--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node --env-file=.env index.js",
-    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client",
+    "build": "npm install --legacy-peer-deps && npm install --legacy-peer-deps --prefix ../client && npm run build --prefix ../client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
